crates/toml_edit/tests/snapshots/invalid/bool/starting-same-true.stderr
TOML parse error at line 1, column 27
  |
1 | starting-same-true      = truer
  |                           ^^^^^
invalid boolean, expected `true`
